deploy/kustomize/namespaced/deployment-localhost.yaml
apiVersion: v1
kind: Service
metadata:
  name: semaphore-xds-localhost
spec:
  type: ClusterIP
  ports:
    - name: xds
      port: 18000
      protocol: TCP
      targetPort: 18000
  selector:
    app.kubernetes.io/name: semaphore-xds-localhost
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: semaphore-xds-localhost
  labels:
    app.kubernetes.io/name: semaphore-xds-localhost
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: semaphore-xds-localhost
  template:
    metadata:
      labels:
        app.kubernetes.io/name: semaphore-xds-localhost
    spec:
      serviceAccountName: semaphore-xds
      containers:
        - name: xds-server
          image: semaphore-xds
          args:
            - -localhost-endpoints=true
          ports:
            - containerPort: 18000
              protocol: TCP
